clusters/syd/platform/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    gethomepage.dev/description: Infrastructure Observability
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Operations
    gethomepage.dev/href: https://grafana.syd.excloo.dev
    gethomepage.dev/icon: grafana
    gethomepage.dev/name: Grafana (SYD)
    gethomepage.dev/siteMonitor: https://grafana.syd.excloo.dev
  labels:
    app.kubernetes.io/name: grafana
spec:
  hostnames:
    - grafana.syd.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
