clusters/syd/platform/headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/description: Kubernetes Dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://headlamp.syd.excloo.dev
    gethomepage.dev/icon: headlamp
    gethomepage.dev/name: Headlamp (SYD)
    gethomepage.dev/siteMonitor: https://headlamp.syd.excloo.dev
  labels:
    app.kubernetes.io/name: headlamp
spec:
  hostnames:
    - headlamp.syd.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
